Jetson_Control/results.txt
[ 50%] Building CXX object CMakeFiles/jetson_control.dir/src/jetson.cpp.o
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:26:1: error: ‘header’ does not name a type
 header, in_h, in_h2 = 0;
 ^~~~~~
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:27:1: error: ‘packet_pos’ does not name a type
 packet_pos, in_pp = -1;
 ^~~~~~~~~~
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:29:41: error: two or more data types in declaration of ‘initPort’
 static void void initPort(int *xbee_port) {
                                         ^
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp: In function ‘void* telemetry(void*)’:
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:93:9: error: ‘initPort’ was not declared in this scope
         initPort(&xbee_port);
         ^~~~~~~~
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:93:9: note: suggested alternative: ‘intptr_t’
         initPort(&xbee_port);
         ^~~~~~~~
         intptr_t
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:107:51: error: expression cannot be used as a function
                             (command_qp+packet_pos)->c_header.length = c - '0';
                                                   ^
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:124:33: error: expected ‘;’ before ‘}’ token
                                 }
                                 ^
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:171:28: error: a function-definition is not allowed here before ‘{’ token
 static void load_command() {
                            ^
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:199:31: error: a function-definition is not allowed here before ‘{’ token
 static void execute_command() {
                               ^
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:219:26: error: a function-definition is not allowed here before ‘{’ token
 static void system_mode(){
                          ^
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:228:31: error: a function-definition is not allowed here before ‘{’ token
 static void actuator_command(){}
                               ^
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:229:19: error: a function-definition is not allowed here before ‘{’ token
 static void kill(){}
                   ^
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:230:21: error: a function-definition is not allowed here before ‘{’ token
 static void revive(){}
                     ^
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:231:22: error: a function-definition is not allowed here before ‘{’ token
 static void logging(){}
                      ^
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:232:24: error: a function-definition is not allowed here before ‘{’ token
 static void heartbeat(){}
                        ^
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:233:27: error: a function-definition is not allowed here before ‘{’ token
 static void control_loop(){}
                           ^
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:236:34: error: a function-definition is not allowed here before ‘{’ token
 static void *control(void *vargp){
                                  ^
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:247:16: error: a function-definition is not allowed here before ‘{’ token
 int main(void) {
                ^
/home/uct/DIMA/DIMA_Control_Project/Jetson_Control/src/jetson.cpp:264:1: error: expected ‘}’ at end of input
 }
 ^
CMakeFiles/jetson_control.dir/build.make:62: recipe for target 'CMakeFiles/jetson_control.dir/src/jetson.cpp.o' failed
make[2]: *** [CMakeFiles/jetson_control.dir/src/jetson.cpp.o] Error 1
CMakeFiles/Makefile2:67: recipe for target 'CMakeFiles/jetson_control.dir/all' failed
make[1]: *** [CMakeFiles/jetson_control.dir/all] Error 2
Makefile:83: recipe for target 'all' failed
make: *** [all] Error 2
